--- a/css/styles.css
+++ b/css/styles.css
@@ -7,9 +7,12 @@ body {
     height: 100vh;
 
     margin: 0;
+    padding: 0;
 
     font-family: Helvetica, sans-serif;
     font-size: 16px;
+
+    box-sizing: border-box;
 }
 
 label {
@@ -22,6 +25,10 @@ label {
 
 .form-background {
     background-color: rgba(163,196,255,0.65);
+}
+
+.options {
+    font-size: 16px;
 }
 
 #title, #description {
@@ -60,15 +67,6 @@ input, textarea, select {
     padding: 0 10px;
 }
 
-textarea {
-    height: 50px;
-    min-height: 40px;
-    max-height: 60px;
-
-    min-width: 80%;
-    max-width: 90%;
-}
-
 input[type="radio"], input[type="checkbox"] {
     width: unset;
     min-height: 1.5em;
@@ -78,3 +76,32 @@ input[type="radio"], input[type="checkbox"] {
     vertical-align: middle;
 }
 
+@media only screen and (max-width:600px) {
+    body {
+        font-size: 20px;
+    }
+
+    label {
+        font-size: 22px;
+    }
+
+    input, textarea, select {
+        width: 100%;
+    
+        padding: 0 2px;
+    }
+
+    .options {
+        font-size: 18px;
+    }
+
+    #title {
+        font-size: 48px;
+    }
+
+    #survey-form {
+        padding: 0.2em;
+
+        width: 70vw;
+    }
+}
